Add deterministic, MC, and barebones greenspan

--- a/prelim/bibliography.bib
+++ b/prelim/bibliography.bib
@@ -1,9 +1,44 @@
+% Denovo
+@manual{denovo,
+    title     = "Denovo Methods Manual",
+    author    = "Tom Evans",
+    year      = "2012",
+    month     = "July",
+    publisher = "Oak Ridge National Laboratory"
+}
+
 % MCNP
-@manual{mcnp5-theory,
-	title = {{MCNP - A General Monte Carlo N-Particle Transport Code, Version 5: Volume I: Overview and Theory}},
-	author = {{X-5 Monte Carlo Team}},
-	organization = {Los Alamos National Laboratory},
-	edition = {Version 5}, 
-	month = {February},
-	year = 2008
+@manual{mcnp620,
+    title     = "MCNP Version 6.2 Release Notes",
+    author    = "Werner, Christopher John and Bull, Jeffrey S. and Solomon, C. J. and Brown, Forrest B. and McKinney, Gregg Walter and Rising, Michael Evan and Dixon, David A. and Martz, Roger Lee and Hughes, Henry G. and Cox, Lawrence James and Zukaitis, Anthony J. and Armstrong, J. C. and Forster, Robert Arthur and Casswell, Laura",
+    doi       = "10.2172/1419730",
+    place     = "United States",
+    year      = "2018",
+    month     = "February",
+    publisher = "Los Alamos National Laboratory",
+    number    = "LA-UR-18-20808"
+}
+
+% ADVANTG
+@manual{advantg,
+    title     = "ADVANTG - An Automated Variance Reduction Parameter Generator",
+    author    = "Scott W. Mosher and Seth R. Johnson and Aaron M. Bevill and Ahmad M. Ibrahim and Charles R. Daily and Thomas M. Evans and John C. Wagner and Jeffrey O. Johnson and Robert E. Grove",
+    year      = "2015",
+    month     = "August",
+    publisher = "Oak Ridge National Laboratory",
+    number    = "ORNL/TM-2013/416"
+}
+
+% Greenspan
+@incollection{greenspan,
+    title     = "Developments in Perturbation Theory",
+    editor    = "Ernest J. Henley and Jeffery Lewins",
+    booktitle = "Advances in Nuclear Science and Technology",
+    publisher = "Academic Press",
+    pages     = "181 - 268",
+    year      = "1976",
+    isbn      = "978-0-12-029309-4",
+    doi       = "https://doi.org/10.1016/B978-0-12-029309-4.50011-8",
+    url       = "http://www.sciencedirect.com/science/article/pii/B9780120293094500118",
+    author    = "Ehud Greenspan"
 }
