--- a/prelim/content/background-pert.tex
+++ b/prelim/content/background-pert.tex
@@ -10,4 +10,70 @@ Placeholder
 \label{sec:bg:pert:greenspan}
 %===============================================================================
 
-Placeholder
+Reference to Greenspan \cite{greenspan}.
+
+% Equation 29
+\begin{equation*}
+  H\psi = q
+\end{equation*}
+
+% Equation 163
+\begin{equation*}
+  H^+\psi^+ = q^+
+\end{equation*}
+
+% Equation 44a
+\begin{equation*}
+  \bar{H}\delta\psi = \delta q - \delta H\psi
+\end{equation*}
+
+% Equation 44b
+\begin{equation*}
+  H\delta\psi = \delta q - \delta H\bar{\psi}
+\end{equation*}
+
+% Equation 164a
+\begin{equation*}
+  \bar{H}^+\delta\psi^+ = \bar{q}^+ - \bar{H}^+\psi^+ = \delta q^+ - \delta H^+\psi^+
+\end{equation*}
+
+% Equation 164b
+\begin{equation*}
+  H^+\delta\psi^+ = \delta q^+ - \delta H^+\bar{\psi}^+
+\end{equation*}
+
+% Equation 168
+\begin{equation*}
+  R = \left<\psi,q^+\right> = \left<\psi^+,q\right>
+\end{equation*}
+
+% Equation 169
+\begin{equation*}
+  R = \left<\psi,H^+\psi^+\right> = \left<\psi^+,H\psi\right>
+\end{equation*}
+
+% Equation 170a
+\begin{equation*}\begin{split}
+  \delta R = \bar{R} - R & = \left<\bar{\psi},\bar{q}^+\right> - \left<\psi,q^+\right> \\
+                         & = \left<\psi,\delta q^+\right> + \left<\delta\psi,\bar{q}^+\right> \\
+                         & = \left<\psi,\delta q^+\right> + \left<\bar{\psi}^+,\left(\delta q - \delta H\psi\right)\right>
+\end{split}\end{equation*}
+
+% Equation 170b
+\begin{equation*}\begin{split}
+  \delta R = \bar{R} - R & = \left<\bar{\psi}^+,\bar{q}\right> - \left<\psi^+,q\right> \\
+                         & = \left<\psi^+,\delta q\right> + \left<\delta\psi^+,\bar{q}\right> \\
+                         & = \left<\psi^+,\delta q\right> + \left<\bar{\psi},\left(\delta q^+ - \delta H^+\psi^+\right)\right>
+\end{split}\end{equation*}
+
+% Equation 171a, 171b
+\begin{equation*}\begin{split}
+  \delta R & = \delta R^{(1)} + \left<\delta\psi^+,\left(\delta q-\delta H\psi\right)\right> \\
+           & = \delta R^{(1)} + \left<\delta\psi,\left(\delta q^+-\delta H^+\psi^+\right)\right>
+\end{split}\end{equation*}
+
+% Equation 172a, 172b
+\begin{equation*}\begin{split}
+  \delta R^{(1)} & = \left<\psi,\delta q^+\right> + \left<\psi^+,\left(\delta q - \delta H\psi\right)\right> \\
+                 & = \left<\psi^+,\delta q\right> + \left<\psi,\left(\delta q^+ - \delta H^+\psi^+\right)\right>
+\end{split}\end{equation*}
