--- a/prelim/frontmatter/acronyms.tex
+++ b/prelim/frontmatter/acronyms.tex
@@ -3,7 +3,7 @@
 
 \DeclareAcronym{mcnp}{
   short = MCNP,
-  long  = Monte Carlo N-Particle transport code,
+  long  = Monte Carlo N-Particle,
   class = abbrev
 }
 
