--- a/prelim/bibliography.bib
+++ b/prelim/bibliography.bib
@@ -1,44 +1,73 @@
-% Denovo
-@manual{denovo,
-    title     = "Denovo Methods Manual",
-    author    = "Tom Evans",
-    year      = "2012",
-    month     = "July",
-    publisher = "Oak Ridge National Laboratory"
-}
-
 % MCNP
 @manual{mcnp620,
-    title     = "MCNP Version 6.2 Release Notes",
-    author    = "Werner, Christopher John and Bull, Jeffrey S. and Solomon, C. J. and Brown, Forrest B. and McKinney, Gregg Walter and Rising, Michael Evan and Dixon, David A. and Martz, Roger Lee and Hughes, Henry G. and Cox, Lawrence James and Zukaitis, Anthony J. and Armstrong, J. C. and Forster, Robert Arthur and Casswell, Laura",
-    doi       = "10.2172/1419730",
-    place     = "United States",
-    year      = "2018",
-    month     = "February",
-    publisher = "Los Alamos National Laboratory",
-    number    = "LA-UR-18-20808"
+    title     = {MCNP Version 6.2 Release Notes},
+    author    = {Werner, Christopher John and Bull, Jeffrey S. and Solomon, C. J. and Brown, Forrest B. and McKinney, Gregg Walter and Rising, Michael Evan and Dixon, David A. and Martz, Roger Lee and Hughes, Henry G. and Cox, Lawrence James and Zukaitis, Anthony J. and Armstrong, J. C. and Forster, Robert Arthur and Casswell, Laura},
+    doi       = {10.2172/1419730},
+    place     = {United States},
+    year      = {2018},
+    month     = {February},
+    publisher = {Los Alamos National Laboratory},
+    number    = {LA-UR-18-20808}
+}
+
+% Denovo
+@manual{denovo,
+    title     = {Denovo Methods Manual},
+    author    = {Tom Evans},
+    year      = {2012},
+    month     = {July},
+    publisher = {Oak Ridge National Laboratory}
 }
 
 % ADVANTG
 @manual{advantg,
-    title     = "ADVANTG - An Automated Variance Reduction Parameter Generator",
-    author    = "Scott W. Mosher and Seth R. Johnson and Aaron M. Bevill and Ahmad M. Ibrahim and Charles R. Daily and Thomas M. Evans and John C. Wagner and Jeffrey O. Johnson and Robert E. Grove",
-    year      = "2015",
-    month     = "August",
-    publisher = "Oak Ridge National Laboratory",
-    number    = "ORNL/TM-2013/416"
+    title     = {ADVANTG -- An Automated Variance Reduction Parameter Generator},
+    author    = {Scott W. Mosher and Seth R. Johnson and Aaron M. Bevill and Ahmad M. Ibrahim and Charles R. Daily and Thomas M. Evans and John C. Wagner and Jeffrey O. Johnson and Robert E. Grove},
+    year      = {2015},
+    month     = {August},
+    publisher = {Oak Ridge National Laboratory},
+    number    = {ORNL/TM-2013/416}
+}
+
+% Silo
+@manual{silo,
+    title     = {Silo User's Guide},
+    author    = {{Lawrence Livermore National Laboratory}},
+    year      = {2010},
+    month     = {August},
+    publisher = {Lawrence Livermore National Laboratory},
+    number    = {LLNL-SM-453191}
+}
+
+% VisIT
+@incollection{visit,
+    author    = {Hank Childs and Eric Brugger and Brad Whitlock and Jeremy Meredith and Sean Ahern and David Pugmire and Kathleen Biagas and Mark Miller and Cyrus Harrison and Gunther H. Weber and Hari Krishnan and Thomas Fogal and Allen Sanderson and Christoph Garth and E. Wes Bethel and David Camp and Oliver R\"{u}bel and Marc Durant and Jean M. Favre and Paul Navr\'{a}til},
+    title     = {VisIt: An End-User Tool For Visualizing and Analyzing Very Large Data},
+    year      = {2012},
+    pages     = {357-372},
+    month     = {October},
+    booktitle = {High Performance Visualization -- Enabling Extreme-Scale Scientific Insight},
+    publisher = {Lawrence Livermore National Laboratory}
+}
+
+% HDF5
+@online{hdf5,
+    author    = {{The HDF Group}},
+    title     = {Hierarchical Data Format, Version 5},
+    year      = {1997-2020},
+    note      = {http://www.hdfgroup.org/HDF5}
 }
 
 % Greenspan
 @incollection{greenspan,
-    title     = "Developments in Perturbation Theory",
-    editor    = "Ernest J. Henley and Jeffery Lewins",
-    booktitle = "Advances in Nuclear Science and Technology",
-    publisher = "Academic Press",
-    pages     = "181 - 268",
-    year      = "1976",
-    isbn      = "978-0-12-029309-4",
-    doi       = "https://doi.org/10.1016/B978-0-12-029309-4.50011-8",
-    url       = "http://www.sciencedirect.com/science/article/pii/B9780120293094500118",
-    author    = "Ehud Greenspan"
+    title     = {Developments in Perturbation Theory},
+    editor    = {Ernest J. Henley and Jeffery Lewins},
+    booktitle = {Advances in Nuclear Science and Technology},
+    publisher = {Academic Press},
+    pages     = {181-268},
+    year      = {1976},
+    isbn      = {978-0-12-029309-4},
+    doi       = {https://doi.org/10.1016/B978-0-12-029309-4.50011-8},
+    url       = {http://www.sciencedirect.com/science/article/pii/B9780120293094500118},
+    author    = {Ehud Greenspan}
 }
