--- a/prelim/bibliography.bib
+++ b/prelim/bibliography.bib
@@ -71,3 +71,14 @@
     url       = {http://www.sciencedirect.com/science/article/pii/B9780120293094500118},
     author    = {Ehud Greenspan}
 }
+
+% FW-CADIS
+@article{fwcadis,
+    title     = {FW-CADIS Method for Global and Semi-Global Variance Reduction of Monte Carlo Radiation Transport Calculations},
+    author    = {John C. Wagner and Douglas E. Peplow and Scott W. Mosher},
+    journal   = {Nuclear Science and Engineering},
+    volume    = {176},
+    place     = {United States},
+    year      = {2014},
+    month     = {1}
+}
