--- a/prelim/content/background-pert.tex
+++ b/prelim/content/background-pert.tex
@@ -77,3 +77,5 @@ Reference to Greenspan \cite{greenspan}.
   \delta R^{(1)} & = \left<\psi,\delta q^+\right> + \left<\psi^+,\left(\delta q - \delta H\psi\right)\right> \\
                  & = \left<\psi^+,\delta q\right> + \left<\psi,\left(\delta q^+ - \delta H^+\psi^+\right)\right>
 \end{split}\end{equation*}
+
+% Something about how this has been worked out for eigenvalue problems, but not for fixed source problems
