--- a/prelim/frontmatter/acronyms.tex
+++ b/prelim/frontmatter/acronyms.tex
@@ -12,3 +12,9 @@
   long  = AutomateD VAriaNce reducTion Generator,
   class = abbrev
 }
+
+\DeclareAcronym{csg}{
+  short = CSG,
+  long  = Constructive Solid Geometry,
+  class = abbrev
+}
